Web Inspector: Console cleared unexpectedly when inspector reopens rdar://124171190 https://bugs.webkit.org/show_bug.cgi?id=270607

Reviewed by Devin Rousso.

* Source/JavaScriptCore/inspector/agents/InspectorConsoleAgent.cpp:
(Inspector::InspectorConsoleAgent::enable):
- Do not clear the backlog of messages when console agent is enabled.

Canonical link: https://commits.webkit.org/276705@main